# rosbag-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  README.md  UPGRADE_REPORT.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/notepads/rosbag-mcp-upgrade/: COMPLETION_SUMMARY.md  FINAL_STATUS.md  decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: rosbag-mcp-upgrade.md
src/rosbag_mcp/: __init__.py  bag_reader.py  cache.py  config.py  default_config.yaml  message_schemas.yaml  server.py
src/rosbag_mcp/tools/: __init__.py  advanced.py  analysis.py  core.py  events.py  filter.py  introspection.py  messages.py  navigation.py  sensors.py  slam.py  statistics.py  utils.py  visualization.py
tests/: __init__.py  conftest.py  test_bag_reader.py  test_benchmarks.py  test_cache.py  test_tools.py
